# underground

./: Autoencoder.py  Extracting_and_representing_the_latent_space.ipynb  Masked_crops_from_tile.ipynb  Mobie_preparation.ipynb  README.md  Saving_cropped_masks.ipynb  check_tile_orders.py  large_table_2d.py  pyproject.toml  run_cellpose_tif.py  run_cellpose_zarr.py
underground/: Training_notebook.ipynb  train.py
underground/datasets/: __init__.py  cell_dataset.py
underground/models/: __init__.py  autoencoder.py
